--- a/Aula 05 - Objetojs/Atividades/Atividade Revisão/style/style.css
+++ b/Aula 05 - Objetojs/Atividades/Atividade Revisão/style/style.css
@@ -7,7 +7,6 @@
 
 #page {
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,10 +19,14 @@ h1 {
 }
 
 form {
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-    
+    border: solid 1px rgba(0, 0, 0, 0.192);
+    padding: 20px;
+    margin-top: 25px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 5px rgba(128, 128, 128, 0.74);
 }
 
 form > div {
@@ -38,23 +41,66 @@ label {
 
 input {
     height: 45px;
+    border-radius: 10px;
+    border: solid 1px rgba(25, 156, 173, 0.527);
+    padding-left: 5px;
+    font-size: 14px;
+}
+
+input:focus {
+    border: solid 2px rgba(25, 156, 173, 0.788);
+}
+
+#btn {
+    display: flex;
+    align-items: center;
 }
 
 button {
+    width: 400px;
     height: 40px;
     cursor: pointer;
+    background-color: rgb(1, 41, 77);
+    color: white;
+    font-weight: 700;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 4px 4px 5px rgba(128, 128, 128, 0.74);
 }
 
 .add {
-    width: 60%;
+    width: 800px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color: beige;
+    background-color: rgba(25, 156, 173, 0.788);
+    box-shadow: 4px 4px 5px rgba(128, 128, 128, 0.74);
+    margin-bottom: 25px;
+}
+
+.add > h3 {
+    padding-top: 15px;
+    color: white;
+    font-size: 25px;
+    text-align: center;
 }
 
 .add > p {
-    padding: 15px;
-    width: 90%;
+    width: 100%;
+    padding: 20px;
+    word-wrap: break-word;
+    font-weight: 700;
+    text-align: center;
+    color: rgb(1, 41, 77);
+}
+
+.apagar{
+    text-align: end;
+    padding-right: 5px;
+    padding-bottom: 5px;
+}
+
+.apagar > button{
+    width: 35px;
+    height: 35px;
 }
